# canary

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  gguf-audit-spec.md  pyproject.toml
.github/workflows/: ci.yml
c4nary/: __init__.py  bundle.py  cli.py  integrity.py  mcp_server.py  parser.py  remote.py  report.py  template_ast.py
c4nary/known_templates/: chatml.jinja  llama-3.jinja  mistral.jinja
c4nary/rules/: __init__.py  config.py  metadata.py  registry.py  structure.py  template.py  tokenizer.py  tokenizer_json.py
docs/: FINDINGS.md  PROOF.md  THREAT-MODEL.md  VALIDATION.md  corpus-185k-summary.json  corpus-v0.2.2-template-gate-summary.json  corpus-v2-findings.json
tests/: _ggufgen.py  test_behavioral.py  test_bundle.py  test_card.py  test_cli.py  test_config.py  test_consistency.py  test_determinism.py  test_evasion_fixes.py  test_integrity.py  test_mcp.py  test_metadata.py  test_metadata_injection.py  test_multi_template.py  test_parser.py  test_release_gate_scan.py  test_remote.py  test_repo_template.py  test_rules_registry.py  test_template.py  test_template_fail_gate.py  test_template_taint.py  test_tokenizer_json.py  test_tokenizer_seam.py  test_transports.py
tests/fixtures/: behavioral_warn.jinja  cve_llama_drama.jinja  modern_generation.jinja  obfuscated.jinja  trigger_ssti.jinja
tools/: evasions.json  release_gate_scan.py  template_fail_gate.py  validate_corpus.py  validate_mp.py  validate_templates.py  verify.py
