[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Naming is intentionally confined to this file + the console entry point so a
# rebrand stays a one-line change (see spec §10). Distribution/import package:
# "c4nary"; the user-facing command is "canary".
# ---------------------------------------------------------------------------
[project]
name = "c4nary"
version = "0.2.0"
description = "Deterministic, offline, read-only backdoor auditor for GGUF models: statically audits every controllable surface (chat template, tokenizer, model card, config, metadata) without rendering the template or reading weights."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Actual Intelligence LLC" }]
keywords = ["gguf", "security", "backdoor", "ssti", "jinja2", "chat-template",
            "tokenizer", "model-card", "supply-chain", "audit"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Programming Language :: Python :: 3",
]
dependencies = ["jinja2>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
remote = ["requests>=2.25"]
mcp = ["mcp>=1.2"]

[project.scripts]
canary = "c4nary.cli:main"
c4nary = "c4nary.cli:main"
c4nary-mcp = "c4nary.mcp_server:main"

[tool.setuptools.packages.find]
include = ["c4nary*"]

[tool.setuptools.package-data]
"c4nary" = ["known_templates/*.jinja"]

[tool.pytest.ini_options]
testpaths = ["tests"]
